tests/test_concolic/good/context_conflict_on_default.catala_en
## Article

```catala
declaration scope A:
    context output x content integer
    output o content integer

scope A:
    definition x equals 0
    definition x equals 1
    definition o equals 10
    exception definition o under condition x>0 consequence equals 20
```

The concolic interpreter tries different values for the context variable,
including the special "default" value. This allows for the detection of a
conflict when trying to compute the value in this case.

```catala-test-inline
$ catala Concolic -s A
[RESULT] 
[RESULT] Evaluating with inputs:
[RESULT] . x_in = <function>
[RESULT] Output of scope after evaluation:
[RESULT] . o = 20
[RESULT] . x = 42
[RESULT] 
[RESULT] Evaluating with inputs:
[RESULT] . x_in = <function>
[RESULT] Output of scope after evaluation:
[RESULT] . o = 10
[RESULT] . x = 0
[RESULT] 
[RESULT] Evaluating with inputs:
[RESULT] . x_in = <function>
[RESULT] Output of scope after evaluation:
[RESULT]
Found error ↯Conflict(tests/test_concolic/good/context_conflict_on_default.catala_en:10.25-10.26,tests/test_concolic/good/context_conflict_on_default.catala_en:9.25-9.26,)↯
[RESULT] 
[RESULT] Concolic interpreter done
[RESULT] Computation successful!
```

